[gd_scene load_steps=3 format=3 uid="uid://np3h30gxluhy"]

[ext_resource type="Script" uid="uid://o30xha3ttuvp" path="res://Scripts/options_menu.gd" id="1_uj0ok"]
[ext_resource type="Texture2D" uid="uid://bbd6mairu8xw2" path="res://Assets/Title/Title.png" id="2_l1wg4"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uj0ok")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.5
offset_right = 150.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MasterLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Master Volume
"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.5
step = 0.001
value = 1.5

[node name="SFXLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.5
step = 0.001
value = 1.5

[node name="MusicLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.5
step = 0.001
value = 1.5

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visibility_layer = 0
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return
"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1440.0
offset_top = 100.0
offset_right = 1440.0
offset_bottom = 676.0
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(1440, 0)
texture = ExtResource("2_l1wg4")

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
